// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align defaults to left 1`] = `
<th
  class="euiTableHeaderCell"
  role="columnheader"
  scope="col"
>
  <div
    class="euiTableCellContent"
  >
    <span
      class="euiTableCellContent__text"
    />
  </div>
</th>
`;

exports[`align renders center when specified 1`] = `
<th
  class="euiTableHeaderCell"
  role="columnheader"
  scope="col"
>
  <div
    class="euiTableCellContent euiTableCellContent--alignCenter"
  >
    <span
      class="euiTableCellContent__text"
    />
  </div>
</th>
`;

exports[`align renders right when specified 1`] = `
<th
  class="euiTableHeaderCell"
  role="columnheader"
  scope="col"
>
  <div
    class="euiTableCellContent euiTableCellContent--alignRight"
  >
    <span
      class="euiTableCellContent__text"
    />
  </div>
</th>
`;

exports[`renders EuiTableHeaderCell 1`] = `
<th
  aria-label="aria-label"
  class="euiTableHeaderCell testClass1 testClass2"
  data-test-subj="test subject string"
  role="columnheader"
  scope="col"
>
  <div
    class="euiTableCellContent testClass1 testClass2"
  >
    <span
      class="euiTableCellContent__text"
    >
      children
    </span>
  </div>
</th>
`;

exports[`width and style accepts style attribute 1`] = `
<th
  class="euiTableHeaderCell"
  role="columnheader"
  scope="col"
  style="width:20%"
>
  <div
    class="euiTableCellContent"
  >
    <span
      class="euiTableCellContent__text"
    >
      Test
    </span>
  </div>
</th>
`;

exports[`width and style accepts width attribute 1`] = `
<th
  class="euiTableHeaderCell"
  role="columnheader"
  scope="col"
  style="width:10%"
>
  <div
    class="euiTableCellContent"
  >
    <span
      class="euiTableCellContent__text"
    >
      Test
    </span>
  </div>
</th>
`;

exports[`width and style accepts width attribute as number 1`] = `
<th
  class="euiTableHeaderCell"
  role="columnheader"
  scope="col"
  style="width:100px"
>
  <div
    class="euiTableCellContent"
  >
    <span
      class="euiTableCellContent__text"
    >
      Test
    </span>
  </div>
</th>
`;

exports[`width and style resolves style and width attribute 1`] = `
<th
  class="euiTableHeaderCell"
  role="columnheader"
  scope="col"
  style="width:10%"
>
  <div
    class="euiTableCellContent"
  >
    <span
      class="euiTableCellContent__text"
    >
      Test
    </span>
  </div>
</th>
`;
